[project]
name = "tino-storm"
version = "1.1.0"
description = "STORM: A language model-powered knowledge curation engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy_ai==2.4.9",
    "wikipedia==1.4.0",
    "sentence-transformers",
    "toml",
    "langchain-text-splitters",
    "trafilatura",
    "langchain-huggingface",
    "qdrant-client",
    "langchain-qdrant",
    "numpy==1.26.4",
    "litellm==1.59.3",
    "pytz",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"]}}


