[project]
name = "tino-storm"
version = "1.2.0"
description = "STORM: A language model-powered knowledge curation engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy_ai==2.4.9",
    "wikipedia==1.4.0",
    "sentence-transformers",
    "toml",
    "langchain-text-splitters",
    "trafilatura",
    "langchain-huggingface",
    "qdrant-client",
    "langchain-qdrant",
    "numpy==1.26.4",
    "litellm==1.59.3",
    "pytz",
    "httpx>=0.27.0,<0.29",

    "requests>=2.31.0",
    "PyYAML>=6.0",
    "cryptography>=41.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "watchdog",
    "knowledge-storm",
]

[project.scripts]
tino-storm = "tino_storm.cli:main"

[project.optional-dependencies]
scrapers = [
    "snscrape",
    "praw",
    "pypdf",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src", "."]}}


