[project]
name = "tino-storm"
version = "1.2.0"
description = "STORM: A language model-powered knowledge curation engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml",
    "trafilatura",
    "numpy==1.26.4",
    "pytz",
    "httpx>=0.27.0,<0.29",
    "chromadb",

    "requests>=2.31.0",
    "PyYAML>=6.0",
    "cryptography>=41.0.0",
]

[project.scripts]
tino-storm = "tino_storm.cli:main"

[project.entry-points."tino_storm.providers"]
bing_async = "tino_storm.providers.bing_async:BingAsyncProvider"

[project.optional-dependencies]
llm = [
    "backoff>=2.2.1",
    "dspy_ai==2.4.9",
    "litellm==1.59.3",
    "openai>=1.0.0",
    "transformers>=4.38.0",
    "ujson>=5.9.0",
]
scrapers = [
    "snscrape",
    "praw",
    "pypdf",
]
research = [
    "backoff>=2.2.1",
    "dspy_ai==2.4.9",
    "fastapi>=0.110.0",
    "litellm==1.59.3",
    "openai>=1.0.0",
    "transformers>=4.38.0",
    "ujson>=5.9.0",
    "uvicorn>=0.29.0",
    "watchdog",
    "knowledge-storm",
]
retrieval = [
    "sentence-transformers",
    "langchain-text-splitters",
    "langchain-huggingface",
    "qdrant-client",
    "langchain-qdrant",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src", "."]}}


